Fixed horizontal scrolling in Safari offscreen rendered menu

--- a/index.css
+++ b/index.css
@@ -10,6 +10,13 @@
     }
 
     html {
+        /* на малых экранах меню убирается вправо за экран, нужно его отрезать */
+        overflow-x: hidden;
+
+        /* чтобы отрезать правую часть с меню в Safari */
+        max-width: 100vw;
+        /* чтобы не прокручивался контент под меню в Safari */
+        height: 100vw;
         /* чтобы растянуть фон под sitemap на всю высоту */
         min-height: 100%;
         margin: 0;
@@ -25,10 +32,18 @@
 
 /* Page (begin) */
     .page {
-        /* чтобы растянуть фон под sitemap на всю высоту */
-        min-height: 100%;
+        /* чтобы отрезать правую часть с меню в Safari */
+        position: absolute;
+
         /* на малых экранах меню убирается вправо за экран, нужно его отрезать */
         overflow-x: hidden;
+
+        /* чтобы отрезать правую часть с меню в Safari */
+        max-width: 100vw;
+        /* чтобы не прокручивался контент под меню в Safari */
+        height: 100vw;
+        /* чтобы растянуть фон под sitemap на всю высоту */
+        min-height: 100%;
 
         margin: 0;
         padding: 0;
